[package]
name = "shortest_path_viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
stylist = {version="0.10", features=["yew_integration"]}
log = "0.4.17"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
web-sys = "0.3.59"
